gcc/testsuite/rust/rustc/ui/keyword/extern/keyword-extern-as-identifier-type.rs
type A = extern::foo::bar; // { dg-error "" "" { target *-*-* } }

fn main() {}

